--- a/.github/workflows/Build_Test_Deploy.yml
+++ b/.github/workflows/Build_Test_Deploy.yml
@@ -1,43 +1,43 @@
-name: Build, Test, and Deploy on Merge
+# name: Build, Test, and Deploy on Merge
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
-jobs:
-  build_and_test_job:
-    runs-on: ubuntu-latest
-    name: Build and Test Job
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup Node 16.13.2
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16.13.2
-      - name: Install modules
-        run: cd john-macgregor && npm install
-      - name: Run Tests
-        run: cd john-macgregor && npm test
+# jobs:
+#   build_and_test_job:
+#     runs-on: ubuntu-latest
+#     name: Build and Test Job
+#     steps:
+#       - uses: actions/checkout@v2
+#       - name: Setup Node 16.13.2
+#         uses: actions/setup-node@v2
+#         with:
+#           node-version: 16.13.2
+#       - name: Install modules
+#         run: cd sam-giordano && npm install
+#       - name: Run Tests
+#         run: cd sam-giordano && npm test
 
-  build_and_deploy_job:
-    needs: build_and_test_job
-    runs-on: ubuntu-latest
-    name: Build and Deploy Job
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: true
-      - name: Build And Deploy
-        id: builddeploy
-        uses: Azure/static-web-apps-deploy@v1
-        with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_CALM_DESERT_03A4C2510 }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
-          action: "upload"
-          ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
-          # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
-          app_location: "/john-macgregor" # App source code path
-          api_location: "" # Api source code path - optional
-          output_location: "build" # Built app content directory - optional
-          ###### End of Repository/Build Configurations ######
+#   build_and_deploy_job:
+#     needs: build_and_test_job
+#     runs-on: ubuntu-latest
+#     name: Build and Deploy Job
+#     steps:
+#       - uses: actions/checkout@v2
+#         with:
+#           submodules: true
+#       - name: Build And Deploy
+#         id: builddeploy
+#         uses: Azure/static-web-apps-deploy@v1
+#         with:
+#           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_CALM_DESERT_03A4C2510 }}
+#           repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
+#           action: "upload"
+#           ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
+#           # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
+#           app_location: "/sam-giordano" # App source code path
+#           api_location: "" # Api source code path - optional
+#           output_location: "build" # Built app content directory - optional
+#           ###### End of Repository/Build Configurations ######
