--- a/sam-giordano/public/manifest.json
+++ b/sam-giordano/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "John MacGregor",
-  "name": "Create React App Sample",
+  "short_name": "Sam Giordano",
+  "name": "Personal Website",
   "icons": [
     {
       "src":"/android-chrome-192x192.png",
